--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             </div>
         </div>
         <div class="worksCont1">
-            <!-- <div class="sticky">
-
-            </div> -->
+            <div id="websiteHeading">
+                <h2>Website Designs</h2>
+            </div>
             <div class="work">
                 <div class="desc">
                     <h1 class="descHeading">Sylvia</h1>
@@ -136,8 +136,8 @@
             <div class="work">
                 <div class="desc">
                     <h1 class="descHeading">Noor</h1>
-                    <p class="descText">A number system converter website. <br>It is a single page website design for desktop.</p>
-                    <p class="workLink">You can check out the <a href="https://www.figma.com/proto/kaE0bRiUwv7GbYJV00ZNQS/NOOR-(Website_2ndPrototype)?page-id=0%3A1&node-id=215-516&viewport=193%2C-1568%2C0.07&t=rOb8NuOPVmDwfcyv-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=215%3A516"><span style="color:#8E77B0">Figma</span></a> link.</p>
+                    <p class="descText">Designed this comprehensive website for <span style="color:#b4a2ce">psychological analysis</span>, with a special focus on children. <br><br>This multi-page platform features <span style="color:#b4a2ce">interactive games</span> and <span style="color:#b4a2ce">activities</span> that assist in the diagnosis process.</p>
+                    <p class="workLink">You can check out the <a href="https://www.figma.com/proto/kaE0bRiUwv7GbYJV00ZNQS/NOOR-(Website_2ndPrototype)?page-id=0%3A1&node-id=215-516&viewport=174%2C-1364%2C0.08&t=gL4gh1NLb2vLk3VN-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=215%3A516"><span style="color:#8E77B0">Figma</span></a> link.</p>
                 </div>
                 <div class="workVidCont2">
                     <!-- <img src="images/Sylvia.png" alt="" id="workImg"> -->
@@ -150,7 +150,10 @@
             <div class="work">
                 <div class="desc">
                     <h1 class="descHeading">Blood Management System</h1>
-                    <p class="descText">A number system converter website. <br>It is a single page website design for desktop.</p>
+                    <p class="descText" style="margin-bottom: 20px;">Designed the Landing page and Home page for this website.</p>
+                    <p class="descText p p1">The first video shows the <span style="color:#b4a2ce">landing </span>page and the <span style="color:#b4a2ce">scrollable home </span> page with minimal features.</p>
+                    <p class="descText p p2">The second image shows the design for the <span style="color:#b4a2ce">dashboard</span>.</p>
+                    <p class="workLink">You can check out the <a href="https://www.figma.com/proto/pYX0cqK0R010l2sxtOqegK/BloodManagementSystem?page-id=0%3A1&node-id=100-19&viewport=-9890%2C-1214%2C0.45&t=oNiUPxjDlXBN47cw-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=100%3A19"><span style="color:#8E77B0">Figma</span></a> link.</p>
                 </div>
                 <div class="workVidCont3">
                     <!-- <img src="images/Sylvia.png" alt="" id="workImg"> -->
@@ -164,7 +167,10 @@
             <div class="work">
                 <div class="desc">
                     <h1 class="descHeading">LitSync</h1>
-                    <p class="descText">A number system converter website. <br>It is a single page website design for desktop.</p>
+                    <p class="descText" style="margin-bottom: 20px;">Designed two interfaces for the Book and Film Recommendation Website.</p>
+                    <p class="descText p p1">The first interface is a <span style="color:#b4a2ce">flipbook </span>where, user chooses books from the options.</p>
+                    <p class="descText p p2">The second interface is a <span style="color:#b4a2ce">old-style television</span> where user chooses movies from options and finally a list of books is recommended accroding to taste of user.</p>
+                    <p class="workLink">You can check out the <a href="https://www.figma.com/proto/47yj0VAJZwt9CM7ASGWvEw/Promotion?page-id=&node-id=841-254&viewport=82%2C48%2C0.02&t=9cPEw09HAv3EjcHw-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=841%3A254"><span style="color:#8E77B0">Figma</span></a> link for the television interface prototype.</p>
                 </div>
                 <div class="workVidCont4">
                     <!-- <img src="images/Sylvia.png" alt="" id="workImg"> -->
@@ -177,7 +183,11 @@
             <div class="work">
                 <div class="desc">
                     <h1 class="descHeading">Radio</h1>
-                    <p class="descText">A number system converter website. <br>It is a single page website design for desktop.</p>
+                    <p class="descText" style="margin-bottom: 20px;">A Social Audio Platform.</p>
+                    <p class="descText p p1">Designed the <span style="color:#b4a2ce">home page </span>, <span style="color:#b4a2ce">create </span>section and <span style="color:#b4a2ce">audio chatting </span>page.</p>
+                    <!-- <p class="descText p p2">The second interface is a <span style="color:#b4a2ce">old-style television</span> where user chooses movies from options and finally a list of books is recommended accroding to taste of user.</p> -->
+                    <p class="workLink">You can check out the <a href="https://www.figma.com/proto/47yj0VAJZwt9CM7ASGWvEw/Promotion?page-id=&node-id=841-254&viewport=82%2C48%2C0.02&t=9cPEw09HAv3EjcHw-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=841%3A254"><span style="color:#8E77B0">Figma</span></a> link for the television interface prototype.</p>
+    
                 </div>
                 <div class="workVidCont5">
                     <!-- <img src="images/Sylvia.png" alt="" id="workImg"> -->
@@ -190,8 +200,8 @@
         </div>
         <div class="worksCont2">
             <div class="worksContPosters">
-                <div id="smallBox2">
-                    <h1>Posters</h1>
+                <div id="posterHeading">
+                    <h2>Posters</h2>
                 </div>
                 <div class="poster">
                     <img src="images/Aditya L1 (final).png" alt="poster1" class="myPoster">
@@ -210,10 +220,14 @@
                 </div>
             </div>
             <div class="worksContAndroid">
+                <div id="androidHeading">
+                    <h2>Android Designs</h2>
+                </div>
                 <div class="work">
                     <div class="desc">
-                        <h1 class="descHeading">LitSync</h1>
-                        <p class="descText">A number system converter website. <br>It is a single page website design for desktop.</p>
+                        <h1 class="descHeading">Noor</h1>
+                        <p class="descText">Designed this android version of the Noor website with interactive features and <span style="color:#b4a2ce">expandable menus </span>that connect all the pages.</p>
+                        <p class="workLink">You can check out the <a href="https://www.figma.com/proto/EeoPAJOXdx1mkmeaLLtZ2H/NOOR-(Android_1stPrototype)?page-id=0%3A1&node-id=380-2600&viewport=288%2C-2630%2C0.16&t=0ODwNE8v8ii1Xln7-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=380%3A2270"><span style="color:#8E77B0">Figma</span></a> link.</p>
                     </div>
                     <div class="workVidCont6">
                         <!-- <img src="images/Sylvia.png" alt="" id="workImg"> -->
